--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "pug": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/helper-validator-identifier": "^7.10.4",
+    "@babel/parser": "^7.11.3",
+    "@babel/types": "^7.11.0",
     "assert": "^2.0.0",
     "chai": "^4.2.0",
     "mocha": "^8.1.0",
