add sqlite store for sessions

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "set NODE_ENV=production && node ./bin/www",
+    "test": "set NODE_ENV=development && mocha ./test/test.js"
   },
   "author": "",
   "license": "ISC",
