add Winston logger

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.0",
     "connect-better-sqlite3": "git+https://github.com/esdras/connect-better-sqlite3.git",
     "cookie-parser": "^1.4.5",
@@ -17,7 +18,8 @@
     "express-session": "^1.17.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/helper-validator-identifier": "^7.10.4",
