--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
+    "node-expose-sspi": "^0.1.33",
     "pug": "^3.0.0",
     "winston": "^3.3.3"
   },
