--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@babel/types": "^7.11.0",
     "assert": "^2.0.0",
     "chai": "^4.2.0",
+    "cheerio": "^1.0.0-rc.3",
     "mocha": "^8.1.0",
+    "needle": "^2.5.0",
     "puppeteer": "^5.2.1",
     "request": "^2.88.2"
   }
