--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "node-expose-sspi": "^0.1.33",
+    "oracledb": "^5.0.0",
     "pug": "^3.0.0",
     "winston": "^3.3.3"
   },
